--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">  <!kodowanie strony z jakiej korzysta przeglądarka>
-    <title>Blog dla programistów</title>
-</head>
-<body>
-    <div>
-        <h1>Witam na stronie bloga :)</h1>
-        <h2>Blog o programowaniu</h2>
-        <h3>Witam na stronie bloga :)</h3>
-        <h4>Witam na stronie bloga :)</h4>
-    </div>
-
-    <div>
-        <p>To jest akapit</p>
-        <em>Wyróżniony tekst</em><br><!br to nowa linijka>
-        <strong>Gruby tekst</strong>
-        <a href="https://google.com">Link</a>
-    </div>
-
-    {% comment %}
-    Odtąd wyświetla się lista postów.
-    {% endcomment%}
-
+{% extends 'blog/base.html'%}
+{% block content %}
     {% for post in posts %}
-    <div>
-        <p>opublikowany: {{post.publish_date}}</p>
-        <h2><a href="">{{post.title}}</a></h2>
-        <em>{{post.text|linebreaksbr}}</em>
-    </div>
-    {% endfor %}
-</ul>
-</body>
-</html>
+        <div class="post">
+
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+            <em>{{post.text|linebreaksbr}}</em>
+            <div class="data">
+                <p>opublikowany: {{post.publish_date}}</p>
+            </div>
+        </div>
+        {% endfor %}
+    {% endblock %}
